--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_settings">Settings</string>
     <string name="settings">Settings</string>
+    <string name="add_button">Add Product</string>
+    <string name="capture_image">Capture Image</string>
+    <string name="scan_result">Scan Result</string>
 </resources>
