--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,12 @@
 <resources>
-    <string name="app_name">EB</string>
+    <string name="app_name">Ethical Buyers</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
+    <string name="title_scan">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_settings">Settings</string>
     <string name="settings">Settings</string>
     <string name="add_button">Add Product</string>
     <string name="capture_image">Capture Image</string>
     <string name="scan_result">Scan Result</string>
+    <string name="title_permission">Permission</string>
 </resources>
