--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Ethical Buyers</string>
     <string name="title_home">Home</string>
     <string name="title_scan">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_history">History</string>
     <string name="title_settings">Settings</string>
     <string name="settings">Settings</string>
     <string name="add_button">Add Product</string>
@@ -13,4 +13,8 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="search">Search</string>
+    <string name="no_notes_message">No history</string>
+    <string name="add_history_hint">Add History</string>
+    <string name="add_note_dialog_save">Save</string>
+    <string name="add_history_dialog_cancel">Cancel</string>
 </resources>
